tests/good/typing/026-eq-int-string.clap
val x = (42 = "45")
