tests/bad/typing/003-string-instead-of-bool.clap
val x = if "true" then 42 else 36

